--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<button data-ns-test="block-inline-button" >Test1</button>
-		<button data-ns-test="block-inline-button" >Test2</button>
+		<button data-ns-test="block-inline-button" >Inline</button>
+		<button data-ns-test="block-inline-button" >Inline</button>
 
 		<div data-ns-test="block-inline-div">Test1</div>
 		<div data-ns-test="block-inline-div">Test2</div>
